--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Pages/Home.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Pages/Home.cshtml
@@ -95,6 +95,43 @@
 </div>
 <!-- Fact End -->
 
+<!-- Stastic Start -->
+<div class="container-xxl py-5">
+    <div class="container py-5">
+
+        
+
+        <div class="row g-5 align-items-center">
+            <div class="col wow fadeInUp" data-wow-delay="0.1s">
+                <h6 class="text-secondary text-uppercase mb-3">Stastic Timeline</h6>
+                <table class="table  table-danger table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">PickUp City</th>
+                            <th scope="col">Drop City</th>
+                            <th scope="col">Total Order</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @for (var i = 0; i < Model.Timeline.Count; i++)
+                        {
+                            <tr>
+                                <th scope="row">@(i + 1)</th>
+                                <td>@Model.Timeline[i].PickUpCityName</td>
+                                <td>@Model.Timeline[i].DropCityName</td>
+                                <td>@Model.Timeline[i].TotalOrder</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+            
+        </div>
+    </div>
+</div>
+<!-- Stastic End -->
+
 <!-- Quote Start -->
 <div class="container-xxl py-5">
     <div class="container py-5">
